# ZuluIDE-HTTP-PicoW

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
resources/: control.html  control.js  control2.js  milligram.license  style.css  style2.css  style3.css  style4.css  style_rhc.css  version.js
src/: ZuluControlI2CClient.cpp  ZuluControlI2CClient.h  index_html.in  lwipopts.h  main.cpp  url_decode.cpp  url_decode.h
